Add persistent locale selection and browser detection

--- a/locales/en.json
+++ b/locales/en.json
@@ -24,7 +24,14 @@
     "userMenu": {
       "products": "Products",
       "users": "Users",
-      "logout": "Logout"
+      "logout": "Logout",
+      "languageLabel": "Language",
+      "languageDescription": "Choose how WarehouseWrangler appears.",
+      "languageOptions": {
+        "en": "English",
+        "de": "Deutsch",
+        "ru": "Русский"
+      }
     },
     "footer": {
       "createdBy": "Created by",
